# korean_learning_simulator

./: .env.example  .gitignore  Dockerfile  KDH_key.pem  README.md  docker-compose.yml  execution_flow_langgraph.mmd  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
01_conversation/: graph.py  prompts.py  state.py
01_conversation/nodes/: ai_response.py  generate_location_context.py  (+2 more)
02_evaluation/: dialogue_cleansing.py  graph.py  normalization_debug.py  prompts.py  state.py  task.txt
03_review/: graph.py  state.py
api/: conversation_router.py  evaluation_router.py  review_router.py
app/: config.py  main.py  orchestrator.py  ui.py
database/: 2017년 국제 통용 한국어 표준 교육과정 적용 연구(4단계) 어휘, 문법 등급 목록.xlsx  models.py  repository.py  vocabulary.json  vocabulary_homonyms.json
docs/: (EXT) [SeSAC] [코대헌] 기능명세서.docx  CLAUDE.md  PLAN.md  README.md  TODO.md  kiwi_POS.txt
platform/: package-lock.json  package.json
scripts/: README.md  ai_reviewer.py  generate_scenario.py  parse_scenario_results.py  run_server.sh  vocab_matching_interactive.py
services/: llm_service.py  rag_service.py  scoring_service.py  tokenizer_service.py
states/: base_state.py  conversation_state.py  review_state.py
tests/: README.md  conftest.py  parse_compare_results.py  parse_eb_results.py  parse_scenario_results.py  test_dialogue_cleansing.py  test_generate_scenario.py  test_generate_scenario_node.py  test_orchestrator.py  test_review_nodes.py  test_services.py  test_vocab_matching_interactive.py
worklog/: 001-Next.js-프로젝트-초기화.md  002-폴더구조-디자인토큰-레이아웃-세팅.md
(+69 files in other folders)
