[project]
name = "korean-learning-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "gradio>=5.24.0",
    "kiwipiepy>=0.23.0",
    "langgraph>=1.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.0.1",
    "pytest>=7.0.0",
]
